src/test/ui/cfg/future-compat-crate-attributes-using-cfg_attr.stderr
error: `crate_type` within an `#![cfg_attr] attribute is deprecated`
  --> $DIR/future-compat-crate-attributes-using-cfg_attr.rs:4:18
   |
LL | #![cfg_attr(foo, crate_type="bin")]
   |                  ^^^^^^^^^^^^^^^^
   |
   = note: `#[deny(deprecated_cfg_attr_crate_type_name)]` on by default
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #91632 <https://github.com/rust-lang/rust/issues/91632>

error: `crate_name` within an `#![cfg_attr] attribute is deprecated`
  --> $DIR/future-compat-crate-attributes-using-cfg_attr.rs:9:18
   |
LL | #![cfg_attr(foo, crate_name="bar")]
   |                  ^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #91632 <https://github.com/rust-lang/rust/issues/91632>

error: `crate_type` within an `#![cfg_attr] attribute is deprecated`
  --> $DIR/future-compat-crate-attributes-using-cfg_attr.rs:4:18
   |
LL | #![cfg_attr(foo, crate_type="bin")]
   |                  ^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #91632 <https://github.com/rust-lang/rust/issues/91632>

error: `crate_name` within an `#![cfg_attr] attribute is deprecated`
  --> $DIR/future-compat-crate-attributes-using-cfg_attr.rs:9:18
   |
LL | #![cfg_attr(foo, crate_name="bar")]
   |                  ^^^^^^^^^^^^^^^^
   |
   = warning: this was previously accepted by the compiler but is being phased out; it will become a hard error in a future release!
   = note: for more information, see issue #91632 <https://github.com/rust-lang/rust/issues/91632>

error: aborting due to 4 previous errors

